// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component Renders correctly with home theme 1`] = `
<div>
  <div
    class="bg-white z-10"
  >
    <header
      class="relative bg-brand-black"
    >
      <nav
        aria-label="Top"
        class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
      >
        <div
          class="h-16 flex items-center justify-between border-b border-brand-black"
        >
          <div
            class="flex-1 flex items-center xl:hidden"
          >
            <button
              class="-ml-2 bg-brand-black p-2 rounded-md text-gray-400"
              data-testid="button-open"
              type="button"
            >
              <span
                class="sr-only"
              >
                Open menu
              </span>
              <svg
                class="undefined"
                fill="inherit"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.17188 5H20.0156C20.1102 5 20.1875 5.07734 20.1875 5.17188V6.375C20.1875 6.46953 20.1102 6.54688 20.0156 6.54688H3.17188C3.07734 6.54688 3 6.46953 3 6.375V5.17188C3 5.07734 3.07734 5 3.17188 5ZM3.17188 11.5469H20.0156C20.1102 11.5469 20.1875 11.6242 20.1875 11.7188V12.9219C20.1875 13.0164 20.1102 13.0938 20.0156 13.0938H3.17188C3.07734 13.0938 3 13.0164 3 12.9219V11.7188C3 11.6242 3.07734 11.5469 3.17188 11.5469ZM20.0156 18.0938H3.17188C3.07734 18.0938 3 18.1711 3 18.2656V19.4688C3 19.5633 3.07734 19.6406 3.17188 19.6406H20.0156C20.1102 19.6406 20.1875 19.5633 20.1875 19.4688V18.2656C20.1875 18.1711 20.1102 18.0938 20.0156 18.0938Z"
                  fill="#FFFFFF"
                  fill-rule="evenodd"
                  stroke="#FFFFFF"
                  stroke-width="0.25"
                />
              </svg>
            </button>
          </div>
          <div
            class="hidden xl:flex-1 xl:block xl:self-stretch"
          >
            <div
              class="h-full flex space-x-10"
            >
              <a
                class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                href="/uber-uns"
              >
                <span
                  class="uppercase text-sm leading-5"
                >
                  Über uns
                </span>
              </a>
              <a
                class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                href="/roesterei"
              >
                <span
                  class="uppercase text-sm leading-5"
                >
                  Unsere Röster
                </span>
              </a>
              <a
                class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                href="/blog"
              >
                <span
                  class="uppercase text-sm leading-5"
                >
                  Blog
                </span>
              </a>
            </div>
          </div>
          <a
            class="flex h-full items-center pl-2 pr-2"
            href="/"
          >
            <span
              class="sr-only"
            >
              60beans
            </span>
            <img
              alt="60beans"
              class="h-6"
              height="24px"
              src="60beans-light.svg"
              width="118px"
            />
          </a>
          <div
            class="flex-1 flow-root flex h-full items-center"
          >
            <div
              class="flex-1 flex h-full items-center justify-end xl:flex-none"
            >
              <div
                class="hidden h-full xl:flex space-x-8 justify-end"
              >
                <a
                  class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                  href="/taste-finder"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Tastefinder
                  </span>
                </a>
              </div>
              <a
                class="hidden xl:block ml-10"
                href="//staging.www.60beans.com/profile"
              >
                <svg
                  class="undefined"
                  fill="inherit"
                  height="24"
                  viewBox="0 0 24 25"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16 8.66663C16 10.8766 14.21 12.6666 12 12.6666C9.79 12.6666 8 10.8766 8 8.66663C8 6.45663 9.79 4.66663 12 4.66663C14.21 4.66663 16 6.45663 16 8.66663ZM4 18.6666C4 16.0066 9.33 14.6666 12 14.6666C14.67 14.6666 20 16.0066 20 18.6666V20.6666H4V18.6666Z"
                    fill="#FFFFFF"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="none"
                  />
                </svg>
              </a>
              <div
                class="ml-4 flow-root xl:ml-10"
              >
                <button
                  class="relative inline-flex flex-row items-center rounded-full border-2 px-3 py-2 text-sm font-semibold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
                  data-testid="button-shop"
                  role="button"
                >
                  Shop
                </button>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Navigation component Renders correctly with shop theme 1`] = `
<div>
  <div
    class="bg-white z-10"
  >
    <header
      class="relative bg-brand-black"
    >
      <nav
        aria-label="Top"
        class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
      >
        <div
          class="h-16 flex items-center justify-between border-b border-brand-black"
        >
          <div
            class="flex-1 flex items-center xl:hidden"
          >
            <button
              class="-ml-2 bg-brand-black p-2 rounded-md text-gray-400"
              data-testid="button-open"
              type="button"
            >
              <span
                class="sr-only"
              >
                Open menu
              </span>
              <svg
                class="undefined"
                fill="inherit"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.17188 5H20.0156C20.1102 5 20.1875 5.07734 20.1875 5.17188V6.375C20.1875 6.46953 20.1102 6.54688 20.0156 6.54688H3.17188C3.07734 6.54688 3 6.46953 3 6.375V5.17188C3 5.07734 3.07734 5 3.17188 5ZM3.17188 11.5469H20.0156C20.1102 11.5469 20.1875 11.6242 20.1875 11.7188V12.9219C20.1875 13.0164 20.1102 13.0938 20.0156 13.0938H3.17188C3.07734 13.0938 3 13.0164 3 12.9219V11.7188C3 11.6242 3.07734 11.5469 3.17188 11.5469ZM20.0156 18.0938H3.17188C3.07734 18.0938 3 18.1711 3 18.2656V19.4688C3 19.5633 3.07734 19.6406 3.17188 19.6406H20.0156C20.1102 19.6406 20.1875 19.5633 20.1875 19.4688V18.2656C20.1875 18.1711 20.1102 18.0938 20.0156 18.0938Z"
                  fill="#FFFFFF"
                  fill-rule="evenodd"
                  stroke="#FFFFFF"
                  stroke-width="0.25"
                />
              </svg>
            </button>
          </div>
          <div
            class="hidden xl:flex-1 xl:block xl:self-stretch"
          >
            <div
              class="h-full flex space-x-10"
            >
              <a
                class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                href="/uber-uns"
              >
                <span
                  class="uppercase text-sm leading-5"
                >
                  Über uns
                </span>
              </a>
              <a
                class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                href="/roesterei"
              >
                <span
                  class="uppercase text-sm leading-5"
                >
                  Unsere Röster
                </span>
              </a>
              <a
                class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                href="/blog"
              >
                <span
                  class="uppercase text-sm leading-5"
                >
                  Blog
                </span>
              </a>
            </div>
          </div>
          <a
            class="flex h-full items-center pl-2 pr-2"
            href="/"
          >
            <span
              class="sr-only"
            >
              60beans
            </span>
            <img
              alt="60beans"
              class="h-6"
              height="24px"
              src="60beans-light.svg"
              width="118px"
            />
          </a>
          <div
            class="flex-1 flow-root flex h-full items-center"
          >
            <div
              class="flex-1 flex h-full items-center justify-end xl:flex-none"
            >
              <div
                class="hidden h-full xl:flex space-x-8 justify-end"
              >
                <a
                  class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                  href="/taste-finder"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Tastefinder
                  </span>
                </a>
              </div>
              <a
                class="hidden xl:block ml-10"
                href="//staging.www.60beans.com/profile"
              >
                <svg
                  class="undefined"
                  fill="inherit"
                  height="24"
                  viewBox="0 0 24 25"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16 8.66663C16 10.8766 14.21 12.6666 12 12.6666C9.79 12.6666 8 10.8766 8 8.66663C8 6.45663 9.79 4.66663 12 4.66663C14.21 4.66663 16 6.45663 16 8.66663ZM4 18.6666C4 16.0066 9.33 14.6666 12 14.6666C14.67 14.6666 20 16.0066 20 18.6666V20.6666H4V18.6666Z"
                    fill="#FFFFFF"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="none"
                  />
                </svg>
              </a>
              <div
                class="ml-4 flow-root xl:ml-10"
              >
                <a
                  class="group -m-2 p-2 flex items-center"
                  href="/cart"
                  id="toCart"
                >
                  <div
                    class="static flex-shrink-0 relative"
                  >
                    <svg
                      class="undefined"
                      fill="inherit"
                      height="24"
                      viewBox="0 0 24 25"
                      width="24"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M3 3.66663H5L5.4 5.66663M7 13.6666H17L21 5.66663H5.4M7 13.6666L5.4 5.66663M7 13.6666L4.70711 15.9595C4.07714 16.5895 4.52331 17.6666 5.41421 17.6666H17M17 17.6666C15.8954 17.6666 15 18.5621 15 19.6666C15 20.7712 15.8954 21.6666 17 21.6666C18.1046 21.6666 19 20.7712 19 19.6666C19 18.5621 18.1046 17.6666 17 17.6666ZM9 19.6666C9 20.7712 8.10457 21.6666 7 21.6666C5.89543 21.6666 5 20.7712 5 19.6666C5 18.5621 5.89543 17.6666 7 17.6666C8.10457 17.6666 9 18.5621 9 19.6666Z"
                        fill="none"
                        fill-rule="evenodd"
                        stroke="#FFFFFF"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                    <span
                      class="absolute top-3 left-4 h-4 w-4 z-10 bg-white rounded-full"
                    >
                      <div
                        class="absolute top-0 left-1 z-15 text-coreUI-text-primary text-xs leading-4 font-semibold"
                      >
                        0
                      </div>
                    </span>
                    <span
                      class="sr-only"
                    >
                      items in cart, view bag
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;
